# zksokbackup

./: .gitignore  README.md
MPC-in-the-head/: README.md
MPC-in-the-head/limbo/: Dockerfile  count.py
MPC-in-the-head/limbo/matmul/: count.py  rewrite.py
MPC-in-the-head/limbo/mods/: BristolCircuit.cpp  bench.cpp  limbo_instances.cpp
PLONK/noir/: gen_inputs.py  input.txt
PLONK/noir/matmult/: Prover.toml
VOLE-ZK/diet-mac-and-cheese/: Dockerfile  config.toml  docker-compose.yml
VOLE-ZK/diet-mac-and-cheese/matmul/: matmul.py  picozk_test.type0.ins  picozk_test.type0.wit  picozk_test.type1.wit
VOLE-ZK/diet-mac-and-cheese/sha256/: sha256.py
VOLE-ZK/emp/: CMakeLists.txt
zkCircuits/emp-bristol/: README.md  genCircuits.cpp  run.sh
zkCircuits/emp-bristol/circuits/: count.py
zkCircuits/picozk/: Dockerfile  run_matmul.sh
zkCircuits/picozk/matmul/: matmul.py  picozk_test.type0.wit
zkCircuits/picozk/sha256/: picozk_test.type0.ins  picozk_test.type0.wit  picozk_test.type1.ins  picozk_test.type1.wit  sha256.py
zkSNARKs/arkworks/groth16/: Dockerfile
zkSNARKs/arkworks/marlin/: Dockerfile
zkSNARKs/arkworks/marlin/matmul/: Cargo.toml
zkSNARKs/arkworks/marlin/matmul/src/: main.rs
zkSNARKs/arkworks/marlin/sha256/: Cargo.toml
zkSNARKs/arkworks/marlin/sha256/src/: main.rs
zkSNARKs/gnark/: README.md
zkSNARKs/hyrax/: Dockerfile
zkSNARKs/hyrax/matmul/: matmult_32.pws  run.sh
zkSNARKs/hyrax/sha256/: run.sh
zkSNARKs/legosnark/: Dockerfile
zkSNARKs/zokrates/: Dockerfile  genInputs.py
zkSTARKs/midenVM/: Dockerfile
zkSTARKs/risc0/: Dockerfile
(+4 files in other folders)
