[package]
name = "ark-sha256"
version = "0.1.0"
edition = "2018"

[dependencies]

ark-crypto-primitives = { version = "0.4", features = [ "parallel", "r1cs", "crh" ] }
ark-bn254 = { version = "0.4", features = [ "curve" ] }
ark-marlin = { version = "0.3", feature=["print-trace"] }
ark-relations = { version = "0.4" }
ark-r1cs-std = "0.4"
ark-ff = { version = "0.4", features = [ "parallel" ] }
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-std = { version = "0.3", features = ["std"] }
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = [ "curve" ] }
ark-serialize = "0.4"
blake2 = { version = "0.9", default-features = false }
digest = { version = "0.9" }
ark-groth16 = { version = "0.4", features = [ "parallel", "r1cs" ] }